# MUSE-VA-Pipeline

./: .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
muse_va_pipeline/: __init__.py  main.py
muse_va_pipeline/generators/: base.py
muse_va_pipeline/knowledge_base/: FMA_genres_hierarchy.json  anew_overall_ratings.csv  audioset_music_ontology.json  cowen_emotion_data.csv
muse_va_pipeline/pipeline/: llm_client.py  stage_1_affective_mapping.py  stage_2_music_association.py  stage_3_suno_caption.py  stage_4_narrative_imagery.py  stage_5_consistency_check.py
muse_va_pipeline/prompts/: stage_2_en.txt  stage_2_zh.txt  stage_3_en.txt  stage_3_zh.txt  stage_4_en.txt  stage_4_zh.txt  stage_5_en.txt  stage_5_zh.txt
muse_va_pipeline/utils/: general.py  va_emotion_mapper.py  va_word_mapper.py
