[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muse-va-pipeline"
version = "0.1.0"
description = "Five-stage text distillation pipeline for MUSE-VA dataset construction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "requests>=2.31",
  "tqdm>=4.66",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8"]

[project.scripts]
muse-va-pipeline = "muse_va_pipeline.main:main"

[tool.setuptools.packages.find]
include = ["muse_va_pipeline*"]

[tool.setuptools.package-data]
muse_va_pipeline = [
  "knowledge_base/*.csv",
  "knowledge_base/*.json",
  "prompts/*.txt",
]
